load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_json",
    srcs = [
        "lobsterjsonasserter.py",
        "lobsterjsonsystemtestcasebase.py",
        "lobsterjsontestrunner.py",
    ],
    data = [
        "//tests_system/lobster_json/data:json_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
        requirement("pyyaml"),
    ],
)

test_suite(
    name = "lobster_json_tests",
)

[py_test(
    name = src[:-3],
    srcs = [src],
    deps = [":lobster_json"],
) for src in glob(["test_*.py"])]
