load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "lobster_meta_data_tool_base",
    srcs = [
        "__init__.py",
        "lobster_meta_data_tool_base_asserters.py",
        "lobster_meta_data_tool_base_cmd_args.py",
        "lobster_meta_data_tool_base_system_test_case_base.py",
        "lobster_meta_data_tool_base_test_runner.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = ["//lobster/common"],
)

py_test(
    name = "test_meta_data_tool_base",
    srcs = ["test_meta_data_tool_base.py"],
)
