load("@rules_python//python:defs.bzl", "py_library", "py_test")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_online_report",
    srcs = [
        "lobster_online_report_system_test_case_base.py",
        "lobster_online_report_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_online_report/data:online_report_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = ["//tests_system"],
)

py_test(
    name = "test_git_repo_different_location",
    srcs = ["test_git_repo_different_location.py"],
    deps = [
        ":lobster_online_report",
        "//tests_system",
        "//tests_system/tests_utils",
    ],
)

py_test(
    name = "test_git_repository",
    srcs = ["test_git_repository.py"],
    deps = [
        ":lobster_online_report",
        "//tests_system",
        "//tests_system/tests_utils",
    ],
)
