load("@rules_python//python:defs.bzl", "py_library", "py_test")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_online_report",
    srcs = [
        "lobster_online_report_system_test_case_base.py",
        "lobster_online_report_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_online_report/data:online_report_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
    ],
)

py_test(
    name = "test_config_exceptions",
    srcs = ["test_config_exceptions.py"],
    deps = [
        ":lobster_online_report",
        "//tests_system",
    ],
)
