load("@rules_python//python:defs.bzl", "py_library", "py_test")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_pkg",
    srcs = [
        "lobster_pkg_system_test_case_base.py",
        "lobster_pkg_test_runner.py",
        "lobster_pkg_asserter.py",
    ],
    data = [
        "//tests_system/lobster_pkg/data:pkg_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
    ],
)

py_test(
    name = "test_invalid_scenario",
    srcs = ["test_invalid_scenario.py"],
    deps = [
        ":lobster_pkg",
        "//lobster/tools/pkg",
        "//tests_system",
    ],
)

py_test(
    name = "test_valid_scenario",
    srcs = ["test_valid_scenario.py"],
    deps = [
        ":lobster_pkg",
        "//lobster/tools/pkg",
        "//tests_system",
    ],
)