load("@rules_python//python:defs.bzl", "py_library", "py_test")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_python",
    srcs = [
        "lobster_python_system_test_case_base.py",
        "lobster_python_test_runner.py",
        "lobster_python_asserter.py",
    ],
    data = [
        "//tests_system/lobster_python/data:python_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
    ],
)

test_suite(
    name = "lobster_python_tests",
)

[py_test(
    name = src[:-3],
    srcs = [src],
    deps = [":lobster_python"],
) for src in glob(["test_*.py"])]
