load("@rules_python//python:defs.bzl", "py_library", "py_test")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_report",
    srcs = [
        "lobster_report_system_test_case_base.py",
        "lobster_report_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_report/data:report_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
    ],
)

test_suite(
    name = "lobster_report_tests",
)

[py_test(
    name = src[:-3],
    srcs = [src],
    deps = [":lobster_report"],
) for src in glob(["test_*.py"])]
