load("@rules_python//python:defs.bzl", "py_library", "py_test")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_trlc",
    srcs = [
        "lobster_system_test_case_base.py",
        "lobster_trlc_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_trlc/data:trlc_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//tests_system",
        "@pip//pyyaml",
    ],
)

py_test(
    name = "test_input_invalid_extensions",
    srcs = ["test_input_invalid_extensions.py"],
    deps = [
        ":lobster_trlc",
        "//tests_system",
    ],
)

py_test(
    name = "test_input_list_of_files",
    srcs = ["test_input_list_of_files.py"],
    deps = [
        ":lobster_trlc",
        "//tests_system",
    ],
)

py_test(
    name = "test_inputs_and_inputs_from_file",
    srcs = ["test_inputs_and_inputs_from_file.py"],
    deps = [
        ":lobster_trlc",
        "//tests_system",
    ],
)

py_test(
    name = "test_inputs_from_file",
    srcs = ["test_inputs_from_file.py"],
    deps = [
        ":lobster_trlc",
        "//tests_system",
    ],
)

py_test(
    name = "test_inputs_from_working_directory",
    srcs = ["test_inputs_from_working_directory.py"],
    deps = [
        ":lobster_trlc",
        "//tests_system",
    ],
)
