load("@rules_python//python:defs.bzl", "py_library", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "lobster_trlc",
    srcs = [
        "lobster_system_test_case_base.py",
        "lobster_trlc_test_runner.py",
    ],
    data = [
        "//tests_system/lobster_trlc/data:trlc_data_system",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:lobster",
        "//tests_system",
        requirement("pyyaml"),
    ],
)

test_suite(
    name = "lobster_trlc_tests",
)

[py_test(
    name = src[:-3],
    srcs = [src],
    deps = [":lobster_trlc"],
) for src in glob(["test_*.py"])]
