load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_binary(
    name = "update_cpptest_expected_output",
    srcs = ["update_cpptest_expected_output.py"],
    visibility = ["//visibility:public"],
)

py_binary(
    name = "update_online_json_with_hashes",
    srcs = ["update_online_json_with_hashes.py"],
    visibility = ["//visibility:public"],
)

py_library(
    name = "tests_utils",
    srcs = [
        "__init__.py",
        "update_cpptest_expected_output.py",
        "update_online_json_with_hashes.py",
    ],
    visibility = ["//visibility:public"],
)
