load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "lobster_cpp",
    srcs = ["__init__.py"],
    visibility = ["//:__subpackages__"],
)

py_test(
    name = "test_implementation_builder",
    srcs = ["test_implementation_builder.py"],
    deps = [
        "//lobster",
        "//lobster/tools/cpp",
    ],
)
