load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "lobster_cpptest",
    srcs = ["__init__.py"],
    visibility = ["//visibility:public"],
)

py_test(
    name = "test_cpptest",
    srcs = ["test_cpptest.py"],
    data = [
        "//tests_unit/lobster_cpptest/data:cpptest_data_unit",
    ],
    visibility = ["//visibility:public"],
    deps = ["//lobster/tools/cpptest"],
)
