load("@rules_python//python:defs.bzl", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_test(
    name = "test_online_report",
    srcs = ["test_online_report.py"],
    data = [
        "//tests_unit/lobster_online_report/data:online_report_data_unit",
    ],
    deps = [
        "//lobster/common",
        "//lobster/tools/core/online_report",
        requirement("yamale")
    ],
)
