load("@rules_python//python:defs.bzl", "py_test")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_test(
    name = "test_trlc",
    srcs = ["test_trlc.py"],
    data = [
        "//tests_unit/lobster_trlc/data:trlc_data_unit",
    ],
    deps = [
        "//lobster/common",
        "//lobster/tools/trlc",
        requirement("trlc"),
    ],
)
