load("@rules_python//python:defs.bzl", "py_library")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "codebeamer",
    srcs = [
        "bearer_auth.py",
        "codebeamer.py",
        "config.py",
        "exceptions.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//lobster/common",
        "@pip//pyyaml",
        "@pip//requests",
        "@pip//urllib3",
    ],
)
