load("@rules_python//python:defs.bzl", "py_library")
load("//:requirements.bzl", "requirement")

# BUILD.bazel
# gazelle:exclude __init__.py

py_library(
    name = "codebeamer",
    srcs = [
        "bearer_auth.py",
        "codebeamer.py",
        "config.py",
        "exceptions.py",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//lobster/common",
        requirement("pyyaml"),
        requirement("requests"),
        requirement("urllib3"),
    ],
)
